<?xml version="1.0" encoding="utf-8"?>
<!--
  Kagami App Shortcuts - Top 4 Scenes

  Colony: Beacon (e5) - Planning
  Long-press launcher icon to access quick scenes

  h(x) >= 0. Always.
-->
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Movie Mode Shortcut -->
    <shortcut
        android:shortcutId="movie_mode"
        android:enabled="true"
        android:icon="@drawable/ic_movie"
        android:shortcutShortLabel="@string/shortcut_movie_mode"
        android:shortcutLongLabel="@string/shortcut_movie_mode_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.kagami.android"
            android:targetClass="com.kagami.android.MainActivity"
            android:data="kagami://scene/movie_mode" />
        <categories android:name="android.shortcut.conversation" />
        <capability-binding android:key="actions.intent.OPEN_APP_FEATURE">
            <parameter-binding
                android:key="feature"
                android:value="movie mode" />
        </capability-binding>
    </shortcut>

    <!-- Goodnight Shortcut -->
    <shortcut
        android:shortcutId="goodnight"
        android:enabled="true"
        android:icon="@drawable/ic_night"
        android:shortcutShortLabel="@string/shortcut_goodnight"
        android:shortcutLongLabel="@string/shortcut_goodnight_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.kagami.android"
            android:targetClass="com.kagami.android.MainActivity"
            android:data="kagami://scene/goodnight" />
        <capability-binding android:key="actions.intent.OPEN_APP_FEATURE">
            <parameter-binding
                android:key="feature"
                android:value="goodnight" />
        </capability-binding>
    </shortcut>

    <!-- Welcome Home Shortcut -->
    <shortcut
        android:shortcutId="welcome_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:shortcutShortLabel="@string/shortcut_welcome_home"
        android:shortcutLongLabel="@string/shortcut_welcome_home_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.kagami.android"
            android:targetClass="com.kagami.android.MainActivity"
            android:data="kagami://scene/welcome_home" />
        <capability-binding android:key="actions.intent.OPEN_APP_FEATURE">
            <parameter-binding
                android:key="feature"
                android:value="welcome home" />
        </capability-binding>
    </shortcut>

    <!-- Focus Mode Shortcut -->
    <shortcut
        android:shortcutId="focus"
        android:enabled="true"
        android:icon="@drawable/ic_focus"
        android:shortcutShortLabel="@string/shortcut_focus"
        android:shortcutLongLabel="@string/shortcut_focus_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.kagami.android"
            android:targetClass="com.kagami.android.MainActivity"
            android:data="kagami://scene/focus" />
        <capability-binding android:key="actions.intent.OPEN_APP_FEATURE">
            <parameter-binding
                android:key="feature"
                android:value="focus mode" />
        </capability-binding>
    </shortcut>

</shortcuts>
